# learning-os

./: Cargo.toml  README.md  x86_64-radius_os.json
.cargo/: config.toml
.github/workflows/: rust.yml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  macros.rs  main.rs  memory.rs  qemu_codes.rs  serial_uart.rs  vga.rs
src/allocator/: bump_allocator.rs  linked_allocator.rs  mod.rs
src/memory/: mod.rs  physaddr.rs  virtaddr.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: basic_boot.rs  executor_test.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
