[package]
authors = ["MikhailMS <1488maiklm@gmail.com>"]
name    = "radius_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader  = "0.9.23"
lazy_static = { version = "1.0",  features = ["spin_no_std"] }
spin        = "0.5.2"
uart_16550  = "0.2.0" # For simpler work with serial UART device
volatile    = "0.2.6"
x86_64      = "0.14.2" # For simpler work with I/O mapped ports

# This is required to ensure we can exit once tests are completed
# Ignore for non-test builds
[package.metadata.bootimage]
test-args              = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout           = 15 # seconds

[[test]]
name    = "should_panic"
harness = false

[[test]]
name    = "stack_overflow"
harness = false
