[package]
authors     = ["MikhailMS <1488maiklm@gmail.com>"]
categories  = ["os", "no-std"]
description = "Learning project to expplore how to build an OS from scratch"
edition     = "2021"
homepage    = "https://github.com/MikhailMS/learning-os"
keywords    = ["operating", "system"]
license     = "MIT"
name        = "radius_os"
readme      = "README.md"
repository  = "https://github.com/MikhailMS/learning-os"
version     = "0.1.0"

[features]
# Default features
default          = ["linked-allocator"]
linked-allocator = []

[dependencies]
bootloader            = { version = "0.9.23", features = [ "map_physical_memory" ] }
conquer-once          = { version = "0.2.0",  default-features = false } # We need to be able to initialise heap allocated objects at compile time (not possible yet); lazy_static could be used instead, but this crate would allow us to ensure that heap allocation doesn't happen in interrupt
crossbeam-queue       = { version = "0.2.1",  default-features = false, features = [ "alloc" ] } # We need ArrayQueue to be able to create a queue for a background tasks
futures-util          = { version = "0.3.4",  default-features = false, features = [ "alloc" ] } # We need Stream trait to ensure our Keyboard task is async-like stream
lazy_static           = { version = "1.0",    features = ["spin_no_std"] }

pc-keyboard           = "0.5.0"  # For simpler work with keyboard
pic8259               = "0.10.1" # For simpler work with PIC (Programmable Interrupt Controller)
spin                  = "0.5.2"
uart_16550            = "0.2.0"  # For simpler work with serial UART device
volatile              = "0.2.6"
x86_64                = "0.14.2" # For simpler work with I/O mapped ports

# This is required to ensure we can exit once tests are completed
# Ignore for non-test builds
[package.metadata.bootimage]
test-args              = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout           = 15 # seconds

[[test]]
name    = "should_panic"
harness = false

[[test]]
name    = "stack_overflow"
harness = false

[[test]]
name    = "executor_test"
harness = false
